# social-reality-aif

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  data.py  main.py  pyproject.toml  utils.py
analysis/: ARCHITECTURE.md  LAYERS_AND_COMMANDS.md  cli.py
analysis/compute_analysis/: __init__.py
analysis/compute_analysis/global_metrics/: __init__.py  metrics.py  pipeline.py
analysis/compute_analysis/step/: __init__.py  metrics.py  pipeline.py
analysis/core/: __init__.py  eval_context.py  fgw.py  registry.py  rsa.py  store.py  types.py
analysis/data_extraction/: __init__.py  pipeline.py  rebuild_society.py  step_extractors.py
analysis/video/: __init__.py  manager.py  pipeline.py
analysis/visualize/: __init__.py  figures_eval.py  figures_fgw.py  figures_rsa.py  figures_summary.py  pipeline.py  plotting.py
config/: config.yaml
scripts/: alife.bash  alife2026_analysis.bash
srcaif/: __init__.py  agent.py  buffer.py  metrics.py  society.py  utils.py
srcaif/models/: __init__.py  critics.py  decoders.py  encoders.py  networks.py
